port: migrate Tactical Loot to Forge 1.20.1